docs/0.11/_sources/api/gammapy.image.models.SkyDiffuseMap.rst.txt
SkyDiffuseMap
=============

.. currentmodule:: gammapy.image.models

.. autoclass:: SkyDiffuseMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SkyDiffuseMap.evaluation_radius
      ~SkyDiffuseMap.map
      ~SkyDiffuseMap.meta
      ~SkyDiffuseMap.norm
      ~SkyDiffuseMap.parameters
      ~SkyDiffuseMap.position

   .. rubric:: Methods Summary

   .. autosummary::

      ~SkyDiffuseMap.__call__
      ~SkyDiffuseMap.copy
      ~SkyDiffuseMap.evaluate
      ~SkyDiffuseMap.normalize
      ~SkyDiffuseMap.read

   .. rubric:: Attributes Documentation

   .. autoattribute:: evaluation_radius
   .. autoattribute:: map
   .. autoattribute:: meta
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: position

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: evaluate
   .. automethod:: normalize
   .. automethod:: read
